--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,6 +9,7 @@
     <string name="menu_about">Informacje</string>
     <string name="title_activity_about">About</string>
 
-    <string name="hello_world">Hello world!</string>
-    <string name="action_settings">Settings</string>
+    <string name="title_section1">Basic</string>
+    <string name="title_section2">Cockroft</string>
+    <string name="title_section3">CKD-EPI</string>
 </resources>
