--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,7 +6,7 @@
     <string name="lbl_cholesterol">Cholesterol (mmol/l) &#8596; (mg/dl)</string>
     <string name="lbl_creatinine">Creatinine (umol/l) &#8596; (mg/dl)</string>
     <string name="btnClear">Clear</string>
-    <string name="menu_about">Informacje</string>
+    <string name="menu_about">About</string>
     <string name="title_activity_about">About</string>
 
     <string name="title_section1">Basic</string>
@@ -14,5 +14,5 @@
     <string name="title_section3">eGFR</string>
 
 <!-- TODO: Remove or change this placeholder text -->
-    <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="hello_blank_fragment">Soon!</string>
 </resources>
